<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fileName"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="44dp"
            android:text="@string/EN_fileName"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.121"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/fileNameBlank"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:ems="30"
            android:hint="@string/EN_fileName_hint"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.579"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fileName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/folder"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:text="@string/EN_folderName"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/folderBlank"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.119"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fileNameBlank"
            app:layout_constraintVertical_bias="0.0" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/folderBlank"
                android:layout_width="240dp"
                android:layout_height="57dp"
                android:layout_marginBottom="12dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/EN_folderName_default_path"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.267" />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/folder_fab"
                android:src="@drawable/open_folder"
                app:backgroundTint="@color/white"
                app:layout_anchorGravity="center"
                android:contentDescription="folder fab"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="28dp"
            android:text="@string/EN_description"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.131"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/folderBlank" />
        <EditText
            android:id="@+id/descriptionBlank"
            android:layout_width="match_parent"
            android:layout_height="204dp"
            android:layout_marginBottom="344dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/EN_description_hint"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.292"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />
    </LinearLayout>
    <Button
        android:id="@+id/saveButton"
        android:layout_width="94dp"
        android:layout_gravity="end"
        android:layout_height="56dp"
        android:layout_marginEnd="40dp"
        android:text="save"
        app:layout_constraintHorizontal_bias="0.693"
      />
</LinearLayout>