<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="48dp">

    <!-- 折線圖 -->
    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="310dp"
        android:layout_height="300dp"
        android:gravity="center"
        android:layout_marginBottom="20dp" />

    <!-- 三個按鈕 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/startButton"
            android:alpha="1.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/EN_startButton"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/recordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/EN_recordButton"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/EN_stopButton"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <!-- timer -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="00:00"
            android:layout_gravity="center" />
    </LinearLayout>

    <Button
        android:id="@+id/BLE_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="BLEbutton" />
</LinearLayout>
